force-app/main/default/objects/Opportunity/fields/Annual_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Renewal__c</fullName>
    <description>Annual renewal value corresponding to the original ANNUAL_RENEWAL source ingredient. Pre-model commercial source data.</description>
    <inlineHelpText>Annual renewal value associated with this opportunity.</inlineHelpText>
    <label>Annual Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>