force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Annual recurring revenue from the upstream opportunity source. Pre-model commercial source data; not an OCX model output.</description>
    <inlineHelpText>Annual recurring revenue associated with this opportunity.</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>