force-app/main/default/objects/Opportunity/fields/OCX_Expansion_Lead__c.field-meta.xml
<CustomField>
    <fullName>OCX_Expansion_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expansion Lead that originated this Opportunity.</description>
    <label>OCX Expansion Lead</label>
    <referenceTo>OCX_Expansion_Lead__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>