force-app/main/default/objects/Opportunity/fields/Source_Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Segment__c</fullName>
    <description>Raw upstream account segment carried on the opportunity.</description>
    <label>Source Account Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>