force-app/main/default/objects/Opportunity/fields/Source_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Source_Age_Days__c</fullName>
    <description>Raw upstream opportunity age in days.</description>
    <label>Source Opportunity Age Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>