force-app/main/default/objects/Opportunity/fields/Source_Average_ACV__c.field-meta.xml
<CustomField>
    <fullName>Source_Average_ACV__c</fullName>
    <description>Raw upstream average ACV ingredient.</description>
    <label>Source Average ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>