force-app/main/default/objects/Opportunity/fields/Source_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Created_Date__c</fullName>
    <description>Raw upstream business created date.</description>
    <label>Source Created Date</label>
    <type>Date</type>
</CustomField>