force-app/main/default/objects/Opportunity/fields/Source_CSM_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Source_CSM_Sentiment__c</fullName>
    <description>Raw upstream CSM sentiment value.</description>
    <label>Source CSM Sentiment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>