force-app/main/default/objects/Opportunity/fields/Source_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Engagement_Type__c</fullName>
    <description>Raw upstream engagement type with legacy branding replaced by Bongo.</description>
    <label>Source Engagement Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>