force-app/main/default/objects/Opportunity/fields/Source_Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Estimated_Close_Date__c</fullName>
    <description>Raw upstream estimated close date.</description>
    <label>Source Estimated Close Date</label>
    <type>Date</type>
</CustomField>