force-app/main/default/objects/Opportunity/fields/Source_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Source_Forecast_Category__c</fullName>
    <description>Raw upstream forecast category.</description>
    <label>Source Forecast Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>