force-app/main/default/objects/Opportunity/fields/Source_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_Source__c</fullName>
    <description>Raw upstream lead source.</description>
    <label>Source Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>