force-app/main/default/objects/Opportunity/fields/Source_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity_ID__c</fullName>
    <description>Original upstream Opportunity identifier retained for source lineage.</description>
    <label>Source Opportunity ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>