force-app/main/default/objects/Opportunity/fields/Source_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Owner_Name__c</fullName>
    <description>Bongo demo identity replacing the prototype opportunity owner name.</description>
    <label>Source Owner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>