force-app/main/default/objects/Opportunity/fields/Source_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Source_Owner_Role__c</fullName>
    <description>Raw upstream opportunity owner role; prototype person name is not retained.</description>
    <label>Source Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>