force-app/main/default/objects/Opportunity/fields/Source_Probability__c.field-meta.xml
<CustomField>
    <fullName>Source_Probability__c</fullName>
    <description>Raw upstream opportunity probability percentage.</description>
    <label>Source Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>