force-app/main/default/objects/Opportunity/fields/Source_Region__c.field-meta.xml
<CustomField>
    <fullName>Source_Region__c</fullName>
    <description>Raw upstream opportunity region.</description>
    <label>Source Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>