force-app/main/default/objects/Opportunity/fields/Source_Renewal_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Source_Renewal_Dollars__c</fullName>
    <description>Raw upstream renewal dollars ingredient.</description>
    <label>Source Renewal Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>