force-app/main/default/objects/Opportunity/fields/Source_Renewal_Due__c.field-meta.xml
<CustomField>
    <fullName>Source_Renewal_Due__c</fullName>
    <description>Raw upstream renewal due ingredient.</description>
    <label>Source Renewal Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>