force-app/main/default/objects/Opportunity/fields/Source_Renewal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Renewal_Due_Date__c</fullName>
    <description>Raw upstream renewal due date.</description>
    <label>Source Renewal Due Date</label>
    <type>Date</type>
</CustomField>