force-app/main/default/objects/Opportunity/fields/Source_Segment__c.field-meta.xml
<CustomField>
    <fullName>Source_Segment__c</fullName>
    <description>Raw upstream opportunity segment.</description>
    <label>Source Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>