force-app/main/default/objects/Opportunity/fields/Source_Stage__c.field-meta.xml
<CustomField>
    <fullName>Source_Stage__c</fullName>
    <description>Raw upstream opportunity stage; kept separate from Salesforce StageName.</description>
    <label>Source Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>