force-app/main/default/objects/Opportunity/fields/Source_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Sub_Type__c</fullName>
    <description>Raw upstream opportunity sub-type.</description>
    <label>Source Opportunity Sub-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>