force-app/main/default/objects/Opportunity/fields/Source_Territory_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Territory_Manager_Name__c</fullName>
    <description>Bongo demo identity replacing the prototype territory manager name.</description>
    <label>Source Territory Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>