force-app/main/default/objects/Opportunity/fields/Source_Total_Renewal_Due__c.field-meta.xml
<CustomField>
    <fullName>Source_Total_Renewal_Due__c</fullName>
    <description>Raw upstream total renewal due ingredient.</description>
    <label>Source Total Renewal Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>