force-app/main/default/objects/Opportunity/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Raw upstream opportunity type; kept separate from restricted Salesforce Type.</description>
    <label>Source Opportunity Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>