force-app/main/default/objects/Opportunity/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Sales territory corresponding to the original TERRITORY source ingredient. Pre-model commercial source data.</description>
    <inlineHelpText>Sales territory associated with this opportunity.</inlineHelpText>
    <label>Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>